fix type selection in dark mode

--- a/src/scss/block/type.scss
+++ b/src/scss/block/type.scss
@@ -15,6 +15,7 @@
 		.item.hover { background: $colorHover; }
 
 		.item {
+			.icon { flex-shrink: 0; }
 			.icon.search { width: 12px; height: 12px; background-image: url('~img/icon/block/search.svg'); }
 		}
 	}
